[tool.poetry]
name = "entropy-bfkm"
version = "0.1.0"
description = "Entropy-Regularized Bayesian Fuzzy K-Means clustering"
authors = ["Abhishek Sharma <your_email@example.com>"]
packages = [{ include = "*", from = "src" }]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.24.0"
scikit-learn = "^1.3.0"
pandas = "^2.2.3"
tabulate = "^0.9.0"
matplotlib = "^3.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
